--- a/pages/quize.html
+++ b/pages/quize.html
@@ -15,7 +15,7 @@
         <div class="quize-card" >
             <div id="quize-card"></div>
             <div class="flex gap-5 submit-buttons">
-                <button class="outlined"><i class="fa-solid fa-angle-left"></i>Back</button>
+                <button class="outlined" id="back-btn"><i class="fa-solid fa-angle-left"></i>Back</button>
                 <button class="outlined" id="submit">check<i class="fa-solid fa-check-double"></i></button>
             </div>
         </div>
